tests/ui/iterators/collect-into-slice.stderr
error[E0277]: a slice of type `[i32]` cannot be built since `[i32]` has no definite size
  --> $DIR/collect-into-slice.rs:6:38
   |
LL |     let some_generated_vec = (0..10).collect();
   |                                      ^^^^^^^ try explicitly collecting into a `Vec<{integer}>`
   |
   = help: the trait `FromIterator<{integer}>` is not implemented for `[i32]`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL

error[E0277]: the size for values of type `[i32]` cannot be known at compilation time
  --> $DIR/collect-into-slice.rs:6:9
   |
LL |     let some_generated_vec = (0..10).collect();
   |         ^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[i32]`
   = note: all local variables must have a statically known size

error[E0277]: the size for values of type `[i32]` cannot be known at compilation time
  --> $DIR/collect-into-slice.rs:6:38
   |
LL |     let some_generated_vec = (0..10).collect();
   |                                      ^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[i32]`
note: required by an implicit `Sized` bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL

error[E0277]: a slice of type `&[i32]` cannot be built since we need to store the elements somewhere
  --> $DIR/collect-into-slice.rs:18:38
   |
LL |     let some_generated_vec = (0..10).collect();
   |                                      ^^^^^^^ try explicitly collecting into a `Vec<{integer}>`
   |
   = help: the trait `FromIterator<{integer}>` is not implemented for `&[i32]`
note: required by a bound in `collect`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
